New CSS Practice

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -28,18 +28,33 @@
     <!-- font-weight -->
 
     <div class="fontweight">
+        <h1>Font-weight</h1>
         <h1 id ="w1">Hello</h1>
         <h1 id ="w2">Hello</h1>
         <h1 id ="w3">Hello</h1>
     </div>
 
+<!-- forn-family  -->
+
     <div class="fontfamily">
+        <h1>Font Family</h1>
         <p id =p_one>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ullam doloribus officiis laboriosam sapiente enim corporis similique libero, quas quisquam delectus accusantium atque dolorum quis maiores reprehenderit a? Quo, quam.
         </p>
         <p id="p_two">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus illo repellendus quae fugit dicta consequuntur nisi, neque, expedita quasi fuga nam, exercitationem doloribus! Voluptas, vero assumenda provident sint quia ea?
         </p>
+    </div>
+
+    <div class="lineheight">
+        <h1>Line Height</h1>
+        <p id ="l_one">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio officiis repellat nihil quasi nisi magni neque impedit deserunt. Voluptatem sunt nemo vel placeat dicta ullam libero, veniam obcaecati itaque a Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem impedit temporibus voluptate? Laudantium voluptates ipsa nobis sequi fugiat eum quibusdam nesciunt excepturi, similique, quo facilis non! Quis perspiciatis distinctio reprehenderit..</p>
+        
+    </div>
+
+    <div class="textranformation">
+        <h1>Text Transformations</h1>
+        <p id="t_transfer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut fuga reprehenderit, qui quidem dolores asperiores non explicabo, exercitationem, vero dolorem mollitia quam officia natus amet ad molestiae placeat dicta omnis.</p>
     </div>
 
 </body>
