--- a/DrAngelaYu/Flex-Box/9.1 Flex Direction/index.html
+++ b/DrAngelaYu/Flex-Box/9.1 Flex Direction/index.html
@@ -13,8 +13,10 @@
     .container {
       color: white;
       border: 5px solid seagreen;
-      display: inline-flex;
-      flex-direction: column;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      
       
     }
 
